--- a/index.html
+++ b/index.html
@@ -2,16 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Order Form Prelim</tile>
+  <title>Order Form Prelim</title>
 </head>
 
 <body>
 
 <header role="banner">
+<h1>Order Form Login</h1>
 </header>
 
 <main role="main">
-Order Form Login
+
+  <form id="login-form" method="post" action="" accept-charset="UTF-8">
+
+    <fieldset>
+
+      <legend>Please Sign In</legend>
+
+      <div>
+        <label for="user-email">Email</label>
+        <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
+      </div>
+
+      <div>
+        <label for="user-password">Password</label>
+        <input type="password" id="user-password" name="user[password]" placeholder="Password">
+      </div>
+
+      <div>
+        <input type="submit" value="Sign In">
+      </div>
+
+    </fieldset>
+
 </main>
 
 <footer>
