--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 </main>
 
 <footer>
+  <p>
+    <a href="/privacy">Privacy Policy</a> &bull;
+    <a href="/terms">Terms and Conditions</a> &bull;
+    <a>&copy 2014 Victor Lin Photography</a>
+  </p>
 </footer>
 
 </body>
