--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Order Form Prelim</title>
+  <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all">
 </head>
 
 <body>
@@ -19,17 +20,17 @@
 
       <legend>Please Sign In</legend>
 
-      <div>
+      <div class="form-group">
         <label for="user-email">Email</label>
         <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
       </div>
 
-      <div>
+      <div class="form-group">
         <label for="user-password">Password</label>
         <input type="password" id="user-password" name="user[password]" placeholder="Password">
       </div>
 
-      <div>
+      <div class="form-group">
         <input type="submit" value="Sign In">
       </div>
 
@@ -41,7 +42,7 @@
   <p>
     <a href="/privacy">Privacy Policy</a> &bull;
     <a href="/terms">Terms and Conditions</a> &bull;
-    <a>&copy 2014 Victor Lin Photography</a>
+    <a>&copy; 2014 Victor Lin Photography</a>
   </p>
 </footer>
 
