Added Bootstrap and configured login form

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       <legend>Please Sign In</legend>
 
       <div class="form-group">
-        <label for="user-email">Email</label>
+        <label for="user-email" class="sr-only control-label">Email</label>
         <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
       </div>
 
       <div class="form-group">
-        <label for="user-password">Password</label>
+        <label for="user-password" class="sr-only control-label">Password</label>
         <input type="password" id="user-password" name="user[password]" placeholder="Password">
       </div>
 
       <div class="form-group">
-        <input type="submit" value="Sign In">
+        <input type="submit" value="Sign In" class="btn btn-success control-label">
       </div>
 
     </fieldset>
@@ -42,7 +42,7 @@
   <p>
     <a href="/privacy">Privacy Policy</a> &bull;
     <a href="/terms">Terms and Conditions</a> &bull;
-    <a>&copy; 2014 Victor Lin Photography</a>
+    &copy; 2014 Victor Lin Photography
   </p>
 </footer>
 
