Added Bootstrap Footer Center Tweak

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
       }
     }
 
-
+    .credit {
+      text-align: center;
+      color: #5a5a5a;
+    }
 
     /* Custom page CSS
     -------------------------------------------------- */
