--- a/index.html
+++ b/index.html
@@ -4,71 +4,7 @@
   <meta charset="UTF-8">
   <title>Order Form Prelim</title>
   <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all">
-  <style type="text/css">
-
-    /* Sticky footer styles
-    -------------------------------------------------- */
-
-    html,
-    body {
-      height: 100%;
-      /* The html and body elements cannot have any padding or margin. */
-    }
-
-    /* Wrapper for page content to push down footer */
-    #wrap {
-      min-height: 100%;
-      height: auto !important;
-      height: 100%;
-      /* Negative indent footer by it's height */
-      margin: 0 auto -60px;
-    }
-
-    .marketing {
-      text-align: center;
-      color: #5a5a5a;
-    }
-
-    /* Set the fixed height of the footer here */
-    #push,
-    #footer {
-      height: 60px;
-    }
-    #footer {
-      background-color: #f5f5f5;
-    }
-
-    /* Lastly, apply responsive CSS fixes as necessary */
-    @media (max-width: 767px) {
-      #footer {
-        margin-left: -20px;
-        margin-right: -20px;
-        padding-left: 20px;
-        padding-right: 20px;
-      }
-    }
-
-    .credit {
-      text-align: center;
-      color: #5a5a5a;
-    }
-
-    /* Custom page CSS
-    -------------------------------------------------- */
-    /* Not required for template or sticky footer method. */
-
-    #wrap > .container {
-      padding-top: 60px;
-    }
-    .container .credit {
-      margin: 20px 0;
-    }
-
-    code {
-      font-size: 80%;
-    }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/application.css" media="all">
 </head>
 
 <body>
