Added some more styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header role="banner">
-  <h1 class="marketing">Order Form Login</h1>
+  <h1 class="marketing nav-bar-inverse">Order Form Login</h1>
 </header>
 
 <main role="main" class="container">
